# tg-mini-app

./: .gitignore  pyproject.toml
src/: main.py
src/backend/core/: config.py
